# sg1000-multicart

./: CMakeLists.txt  README.md  fatfs_disk.c  flash_fs.c  memmap_sd1000.ld  menu_rom.h  msc_disk.c  sega_cart.c  tusb_config.h
menu/: .gitignore  1menu.sg  Makefile  bin2c.py  font.h  menu.c  menu.sg  sega_logo.h
roms/: .gitignore  make.py
